# traceflow

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
app/: main.py
app/ai/: client.py  prompts.py  services.py
app/api/: router.py
app/api/routes/: acceptance_runs.py  ai.py  dashboard.py  github_links.py  health.py  requirements.py  scenarios.py  tasks.py  test_summaries.py
app/api/schemas/: __init__.py  acceptance_runs.py  ai.py  dashboard.py  github_links.py  requirements.py  scenarios.py  tasks.py  test_summaries.py
app/core/: config.py  database.py
app/domain/models/: __init__.py  acceptance_run.py  github_link.py  requirement.py  task.py  (+2 more)
docs/: DASHBOARD_SUMMARY_PRD.md  DB_SCHEMA.md  LOCALIZATION_RULES.md  PRD.md  SESSION_RECOVERY.md  TASKS.md  TECH_DESIGN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  api.ts  copy.ts  display.ts  styles.css  types.ts
scripts/: run_backend.ps1  run_frontend.ps1
tests/: conftest.py
tests/integration/: test_acceptance_runs_api.py  test_ai_api.py  test_dashboard_api.py  test_github_links_api.py  test_health.py  test_requirement_detail_api.py  test_requirements_api.py  test_scenarios_api.py  test_smoke_flow.py  test_tasks_api.py  test_test_summaries_api.py
tests/unit/: test_acceptance_run_service.py  test_ai_draft_service.py  test_github_link_service.py  test_requirement_service.py  test_scenario_service.py  test_task_service.py  test_test_summary_service.py
(+16 files in other folders)
